--- a/cmd/frontend/templates/chat_bot.gohtml
+++ b/cmd/frontend/templates/chat_bot.gohtml
@@ -36,7 +36,7 @@
                             </div>
                             <div class="col-6 col-md-4 col-lg-3 mb-3">
                                 <div role="button" class="btn btn-success btn-block mb-0">
-                                    <strong>All commands are rate limited to 1/s</strong>
+                                    <strong>All commands are rate limited to every 3 seconds</strong>
                                 </div>
                             </div>
                         </div>
