--- a/cmd/frontend/templates/includes/footer.gohtml
+++ b/cmd/frontend/templates/includes/footer.gohtml
@@ -1,7 +1,7 @@
 {{define "footer"}}
 
     <footer>
-        <div class="container">
+        <div class="container text-center">
 
             {{ if .ShowAds }}
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -9,7 +9,7 @@
                 <script> (adsbygoogle = window.adsbygoogle || []).push({});</script>
             {{ end }}
 
-            <small class="text-muted text-center">
+            <small class="text-muted">
                 Global Steam is not affiliated with Steam.
                 All copyrights reserved to their respective owners.
                 <a href="/terms">Terms of Service</a>.
