Add stats to home

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -100,6 +100,29 @@
                 </div>
             </div>
 
+        </div>
+        <div class="row">
+            <div class="col-6 col-sm-4 col-xl-2 mb-4">
+                <a href="/players" role="button" class="btn btn-success btn-block mb-0">Players<br/>{{ comma64 .PlayersCount}}</a>
+            </div>
+            <div class="col-6 col-sm-4 col-xl-2 mb-4">
+                <a href="/games" role="button" class="btn btn-success btn-block mb-0">Games<br/>{{ comma64 .AppsCount}}</a>
+            </div>
+            <div class="col-6 col-sm-4 col-xl-2 mb-4">
+                <a href="/packages" role="button" class="btn btn-success btn-block mb-0">Packages<br/>{{ comma64 .PackagesCount}}</a>
+            </div>
+            <div class="col-6 col-sm-4 col-xl-2 mb-4">
+                <a href="/bundles" role="button" class="btn btn-success btn-block mb-0">Bundles<br/>{{ comma64 .BundlesCount}}</a>
+            </div>
+            <div class="col-6 col-sm-4 col-xl-2 mb-4">
+                <a href="/achievements" role="button" class="btn btn-success btn-block mb-0">Achievements<br/>{{ comma64 .AchievementsCount}}</a>
+            </div>
+            <div class="col-6 col-sm-4 col-xl-2 mb-4">
+                <a href="/news" role="button" class="btn btn-success btn-block mb-0">Articles<br/>{{ comma64 .ArticlesCount}}</a>
+            </div>
+        </div>
+        <div class="row">
+
             <div class="col-12 mb-4 d-none d-lg-block">
 
                 <div class="card">
