--- a/cmd/frontend/templates/stats_steam.gohtml
+++ b/cmd/frontend/templates/stats_steam.gohtml
@@ -15,7 +15,7 @@
 
                 <div class="row">
                     <div class="col mb-4">
-                        <a href="/games" role="button" class="btn btn-success btn-block mb-0">Apps<br/>{{ comma64 .AppsCount}}</a>
+                        <a href="/games" role="button" class="btn btn-success btn-block mb-0">Games<br/>{{ comma64 .AppsCount}}</a>
                     </div>
                     <div class="col mb-4">
                         <a href="/packages" role="button" class="btn btn-success btn-block mb-0">Packages<br/>{{ comma64 .PackagesCount}}</a>
