Add twitter button

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -96,7 +96,9 @@
                     <div class="card-body">
                         <i class="fas fa-spinner fa-spin"></i>
                     </div>
-                    <a class="card-footer" href="https://twitter.com/gamedb_online" target="_blank" rel="noopener">@gamedb_online</a>
+                    <div class="card-footer pb-2">
+                        <a href="https://twitter.com/gamedb_online?ref_src=twsrc%5Etfw" class="twitter-follow-button mb-0" data-size="large" data-show-screen-name="false" data-dnt="true" data-show-count="false">Follow @gamedb_online</a>
+                    </div>
                 </div>
             </div>
 
