--- a/cmd/frontend/templates/bundle.gohtml
+++ b/cmd/frontend/templates/bundle.gohtml
@@ -89,8 +89,7 @@
                                             <th scope="col">App</th>
                                             <th scope="col">Price</th>
                                             <th scope="col">Type</th>
-                                            <th scope="col">Developers</th>
-                                            <th scope="col">Publishers</th>
+                                            <th scope="col">Score</th>
                                             <th scope="col" data-disabled>Platforms</th>
                                         </tr>
                                         </thead>
@@ -104,8 +103,7 @@
                                                 </td>
                                                 <td nowrap="nowrap">{{ (.GetPrices.Get $.UserProductCC.ProductCode).GetFinal }}</td>
                                                 <td>{{ .GetType }}</td>
-                                                <td>{{ .GetDevelopersHTML }}</td>
-                                                <td>{{ .GetPublishersHTML }}</td>
+                                                <td>{{ .GetReviewScore }}</td>
                                                 <td class="platforms">{{ .GetPlatformImages }}</td>
                                             </tr>
                                         {{ end }}
