Use rolling average for new games

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -129,7 +129,7 @@
 
                 <div class="card">
                     <h5 class="card-header">
-                        New Release <small>- In the last 2 weeks - Ordered by players</small>
+                        New Release <small>- In the last 2 weeks - Ordered by players rolling average</small>
                         <small><a href="/games/new-releases" class="float-right">See all New Games</a></small>
                     </h5>
                     <div class="card-body">
