Show requests in guilds table

--- a/cmd/frontend/templates/admin/discord_guilds.gohtml
+++ b/cmd/frontend/templates/admin/discord_guilds.gohtml
@@ -15,6 +15,7 @@
                         <tr>
                             <th scope="col">Guild</th>
                             <th scope="col">Members</th>
+                            <th scope="col">Requests</th>
                         </tr>
                         </thead>
                         <tbody>
