--- a/cmd/frontend/templates/group.gohtml
+++ b/cmd/frontend/templates/group.gohtml
@@ -41,7 +41,9 @@
                 {{ if eq .Group.Type "group" }}
                     <div class="row">
                         <div class="col-6 col-md-4 col-lg-3 mb-3">
-                            <div role="button" class="btn btn-success btn-block mb-0">Primaries<br/>{{ comma .Group.Primaries }}</div>
+                            <div role="button" class="btn btn-success btn-block mb-0" data-toggle="tooltip" data-placement="top" title="People who have set this as Primary Group">
+                                Primaries<br/>{{ comma .Group.Primaries }}
+                            </div>
                         </div>
                     </div>
                 {{ end }}
