--- a/cmd/frontend/templates/groups.gohtml
+++ b/cmd/frontend/templates/groups.gohtml
@@ -57,7 +57,7 @@
                         <tr>
                             <th scope="col" class="thin">#</th>
                             <th scope="col">Name</th>
-                            <th scope="col">Primaries</th>
+                            <th scope="col" data-toggle="tooltip" data-placement="top" title="People who have set this as Primary Group">Primaries</th>
                             <th scope="col">Members</th>
                             <th scope="col">Trend</th>
                             <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
