Add link to chatbot source

--- a/cmd/frontend/templates/chat_bot.gohtml
+++ b/cmd/frontend/templates/chat_bot.gohtml
@@ -39,6 +39,11 @@
                                     <strong>All commands are rate limited to every 3 seconds</strong>
                                 </div>
                             </div>
+                            <div class="col-6 col-md-4 col-lg-3 mb-3">
+                                <a href="https://github.com/gamedb/gamedb/tree/master/cmd/chatbot" role="button" class="btn btn-success btn-block mb-0" target="_blank" rel="noopener">
+                                    <strong>Full open sourced<br> on GitHub</strong>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="table-responsive commands-table mb-4">
