--- a/cmd/frontend/templates/product_keys.gohtml
+++ b/cmd/frontend/templates/product_keys.gohtml
@@ -122,20 +122,9 @@
 
                                 <select class="form-control" id="key" name="key">
                                     <option></option>
-                                    <optgroup label="Common">
-                                        {{ range .Keys }}
-                                            {{if eq .Field "common" }}
-                                                <option value="{{ .Key }}">{{ .Key }}</option>
-                                            {{ end }}
-                                        {{ end }}
-                                    </optgroup>
-                                    <optgroup label="Extended">
-                                        {{ range .Keys }}
-                                            {{if eq .Field "extended" }}
-                                                <option value="{{ .Key }}">{{ .Key }}</option>
-                                            {{ end }}
-                                        {{ end }}
-                                    </optgroup>
+                                    {{ range .Keys }}
+                                        <option value="{{ .Field }}.{{ .Key }}">{{ .Key }} ({{ .FieldTitle }})</option>
+                                    {{ end }}
                                 </select>
 
                             </div>
@@ -155,7 +144,7 @@
                         </div>
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" data-row-type="keys" data-path="/product-keys/product-keys.json" id="search-table">
+                            <table class="table table-hover table-striped table-counts mb-0" data-row-type="games" data-path="/product-keys/product-keys.json" id="search-table">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col" nowrap="nowrap">Game</th>
