--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -869,12 +869,14 @@
 
                         <h5>Similar by owners</h5>
                         <div class="table-responsive mb-4">
-                            <table class="table table-hover table-striped" data-row-type="games" data-ordering="false" id="similar-owners" data-path="/games/{{ .App.ID }}/same-owners.json">
+                            <table class="table table-hover table-striped" data-row-type="games" data-order='[[3, "desc"]]' id="similar-owners" data-path="/games/{{ .App.ID }}/same-owners.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th>Game</th>
-                                    <th>Owners</th>
-                                    <th></th>
+                                    <th>Same Owners</th>
+                                    <th>Total Owners</th>
+                                    <th>Score</th>
+                                    <th><i class="fab fa-steam"></i></th>
                                 </tr>
                                 </thead>
                                 <tbody>
