Add produce helper

--- a/cmd/frontend/templates/admin/queues.gohtml
+++ b/cmd/frontend/templates/admin/queues.gohtml
@@ -17,6 +17,12 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label class="col-sm-3 col-form-label" for="app-id-search">App ID (Search):</label>
+                        <div class="col-sm-3">
+                            <input type="text" name="app-id-search" id="app-id-search" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <label class="col-sm-3 col-form-label" for="package-id">Package ID:</label>
                         <div class="col-sm-3">
                             <input type="text" name="package-id" id="package-id" class="form-control">
