--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -323,6 +323,16 @@
     {{/*        </a>*/}}
     {{/*    {{ end }}*/}}
 
+
+    {{ if .ShowAds }}
+        <div class="container text-center">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <ins class="adsbygoogle" style="display:block; max-height: 120px;" data-ad-client="ca-pub-5468884371420326" data-ad-slot="1243438873" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        </div>
+    {{ end }}
+
+
 </header>
 
 {{/*<div id="ad-top" class="container"></div>*/}}
