--- a/cmd/frontend/templates/includes/footer.gohtml
+++ b/cmd/frontend/templates/includes/footer.gohtml
@@ -3,10 +3,10 @@
     <footer>
         <div class="container text-center">
 
-            {{ if .ShowAds }}
-                <ins class="adsbygoogle mt-4" style="display:block" data-ad-client="ca-pub-5468884371420326" data-ad-slot="2209242047" data-ad-format="auto" data-full-width-responsive="true"></ins>
-                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-            {{ end }}
+            {{/*            {{ if .ShowAds }}*/}}
+            {{/*                <ins class="adsbygoogle mt-4" style="display:block" data-ad-client="ca-pub-5468884371420326" data-ad-slot="2209242047" data-ad-format="auto" data-full-width-responsive="true"></ins>*/}}
+            {{/*                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>*/}}
+            {{/*            {{ end }}*/}}
 
             <small class="text-muted">
                 Global Steam is not affiliated with Steam.
