--- a/cmd/frontend/templates/includes/flashes.gohtml
+++ b/cmd/frontend/templates/includes/flashes.gohtml
@@ -16,4 +16,14 @@
         </div>
     {{ end }}
 
+
+    <div class="container text-center" style="max-height: 120px;" id="flashes-ad">
+        {{ if .ShowAds }}
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <ins class="adsbygoogle" data-ad-client="ca-pub-5468884371420326" data-ad-slot="1243438873" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        {{ end }}
+    </div>
+
+
 {{end}}
