--- a/cmd/frontend/templates/includes/flashes.gohtml
+++ b/cmd/frontend/templates/includes/flashes.gohtml
@@ -17,10 +17,17 @@
     {{ end }}
 
 
-    <div class="container text-center" style="max-height: 120px;" id="flashes-ad">
+    <div class="container text-center" id="flashes-ad">
         {{ if .ShowAds }}
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <ins class="adsbygoogle" style="display: block; max-height: 120px;" data-ad-client="ca-pub-5468884371420326" data-ad-slot="1243438873" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <ins class="adsbygoogle"
+                    {{ if eq .Env "local" }}
+                        data-adtest="on"
+                    {{ end }}
+                 data-ad-client="ca-pub-5468884371420326"
+                 data-ad-slot="1243438873"
+                 style="display: inline-block; width: 100%; height: 120px;">
+            </ins>
             <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         {{ end }}
     </div>
