--- a/cmd/frontend/templates/includes/flashes.gohtml
+++ b/cmd/frontend/templates/includes/flashes.gohtml
@@ -26,7 +26,7 @@
                     {{ end }}
                  data-ad-client="ca-pub-5468884371420326"
                  data-ad-slot="1243438873"
-                 style="display: inline-block; width: 100%; height: 120px;">
+                 style="display: inline-block; width: 100%; max-height: 120px;">
             </ins>
             <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         {{ end }}
