--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -169,6 +169,7 @@
                             <a class="dropdown-item" href="/bundles">Bundles</a>
                             <a class="dropdown-item" href="/price-changes">Price Changes</a>
                             <a class="dropdown-item" href="/changes">Library Changes</a>
+                            <a class="dropdown-item" href="/product-keys">Product Key Search</a>
 
                         </div>
                     </li>
