Update api text

--- a/cmd/frontend/templates/api.gohtml
+++ b/cmd/frontend/templates/api.gohtml
@@ -9,7 +9,7 @@
                 <h1><i class="fas fa-book-reader"></i> Global Steam API Docs</h1>
                 <p class="lead">
                     <small>If you need something that is missing from our API, please <a href="/contact">contact</a> me.</small><br>
-                    <small>The Global Steam API is currently open to donators only to help pay for hosting costs.</small>
+                    <small>Endpoints with a Public tag are public. All other endpoints are donator only to help pay for hosting costs.</small>
                 </p>
             {{ else }}
                 <h1><i class="fas fa-book-reader"></i> Steam API Docs</h1>
