--- a/cmd/frontend/templates/stats_list.gohtml
+++ b/cmd/frontend/templates/stats_list.gohtml
@@ -13,8 +13,8 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <div class="input-group input-group-lg mt-1">
-                        <input class="form-control" type="search" placeholder="Search for a Game" id="search" name="search" autofocus>
-                        <label for="search" class="sr-only sr-only-focusable">Search for a Game</label>
+                        <input class="form-control" type="search" placeholder="Search for an App" id="search" name="search" autofocus>
+                        <label for="search" class="sr-only sr-only-focusable">Search for an App</label>
                         <div class="input-group-append">
                             <input type="submit" value="Search" class="input-group-text">
                         </div>
@@ -37,8 +37,8 @@
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">{{ .Type.Title }}</th>
-                            <th scope="col">Games</th>
-                            <th scope="col">Games %</th>
+                            <th scope="col">Apps</th>
+                            <th scope="col">Apps %</th>
                             <th scope="col">Price (Avg)</th>
                             <th scope="col">Score (Avg)</th>
                             <th scope="col">Players (Avg)</th>
