Fix home css bug

--- a/cmd/frontend/assets/sass/_home.scss
+++ b/cmd/frontend/assets/sass/_home.scss
@@ -57,6 +57,7 @@ body.dark {
                 img {
                     height: 29px;
                     width: 29px;
+                    vertical-align: bottom;
                 }
             }
         }
