--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -559,19 +559,20 @@
                     {{/* Wishlist */}}
                     <div class="tab-pane" id="wishlist" role="tabpanel">
 
-                        <div class="jumbotron inline mb-3">
-                            <h4><i class="fas fa-info"></i></h4>
-                            <div>
-                                {{/*Visit the <a href="/games#wishlists">apps</a> page to see what apps are the most wished for.<br/>*/}}
-                                Reorder your wishlist on the <a href="https://store.steampowered.com/wishlist" target="_blank" rel="noopener">Steam Commity Page</a>.<br/>
-                                Ranks with a dash are newly added and unranked.
-                            </div>
-                        </div>
-
                         <div class="row">
                             <div class="col-6 col-md-4 col-lg-3 mb-3">
-                                <div role="button" class="btn btn-success btn-block mb-0">Total Cost<br/>
+                                <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">Total Cost<br/>
                                     <strong>{{ .Player.GetWishlistTotal .UserProductCC.ProductCode }}</strong>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-4 col-lg-3 mb-3">
+                                <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">
+                                    Reorder your wishlist on the <a href="https://store.steampowered.com/wishlist" target="_blank" rel="noopener">Steam Commity Page</a>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-4 col-lg-3 mb-3">
+                                <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">
+                                    Ranks with a dash are newly added and unranked.
                                 </div>
                             </div>
                         </div>
