--- a/cmd/frontend/templates/product_keys.gohtml
+++ b/cmd/frontend/templates/product_keys.gohtml
@@ -29,13 +29,13 @@
             <div class="card-header">
                 <ul class="nav nav-tabs card-header-tabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#apps" role="tab">Apps</a>
+                        <a class="nav-link active" data-toggle="tab" href="#apps" role="tab" data-keep-query="1">Apps</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#packages" role="tab">Packages</a>
+                        <a class="nav-link" data-toggle="tab" href="#packages" role="tab" data-keep-query="1">Packages</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#search" role="tab">Search</a>
+                        <a class="nav-link" data-toggle="tab" href="#search" role="tab" data-keep-query="1">Search</a>
                     </li>
                 </ul>
             </div>
