--- a/cmd/frontend/templates/product_keys.gohtml
+++ b/cmd/frontend/templates/product_keys.gohtml
@@ -122,11 +122,25 @@
                             <label for="key" class="col-sm-2 col-form-label">Key</label>
                             <div class="col-sm-10">
 
-                                <select class="form-control" id="key" name="key">
+                                <select class="form-control form-control-chosen" id="key" name="key">
                                     <option></option>
                                     {{ range .Keys }}
                                         <option value="{{ .Field }}.{{ .Key }}">{{ .Key }} ({{ .FieldTitle }})</option>
                                     {{ end }}
+                                </select>
+
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="comparator" class="col-sm-2 col-form-label">Comparator</label>
+                            <div class="col-sm-10">
+
+                                <select class="form-control form-control-chosen" id="comparator" name="comparator">
+                                    <option value="">Show All</option>
+                                    <option value="equals">Equals</option>
+                                    <option value="notequals">Not Equals</option>
+                                    <option value="contains">Contains</option>
                                 </select>
 
                             </div>
@@ -139,17 +153,11 @@
                             </div>
                         </div>
 
-                        <div class="form-group row">
-                            <div class="col-sm-10">
-                                <button type="submit" class="btn btn-primary" aria-label="Search">Search</button>
-                            </div>
-                        </div>
-
                         <div class="table-responsive">
                             <table class="table table-hover table-striped table-counts mb-0" data-row-type="games" data-path="/product-keys/product-keys.json" id="search-table">
                                 <thead class="thead-light">
                                 <tr>
-                                    <th scope="col" nowrap="nowrap">Game</th>
+                                    <th scope="col" nowrap="nowrap">App (Sorted by ID)</th>
                                     <th scope="col" nowrap="nowrap">Value</th>
                                 </tr>
                                 </thead>
