Update default groups filter

--- a/cmd/frontend/templates/groups.gohtml
+++ b/cmd/frontend/templates/groups.gohtml
@@ -33,18 +33,12 @@
             <div class="card-body">
 
                 <div class="row">
-                    <div class="d-none">
-                        {{/* This div is so Chrome auto-fills this one and not the rest! */}}
-                        <label for="hidden">Hidden</label>
-                        <select multiple data-placeholder="Hidden" class="form-control form-control-chosen" id="hidden" name="hidden">
-                        </select>
-                    </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="filter">Filter</label>
                             <select class="form-control form-control-chosen" id="filter" name="filter">
                                 <option value="">All Groups</option>
-                                <option value="1" selected>Active Groups</option>
+                                <option value="1">Active Groups</option>
                                 <option value="0">Removed Groups</option>
                             </select>
                         </div>
