Update chatbot docs

--- a/cmd/frontend/templates/chat_bot.gohtml
+++ b/cmd/frontend/templates/chat_bot.gohtml
@@ -81,7 +81,7 @@
                                             {{ end }}
                                         </td>
                                         <td class="nowrap">{{ .Description }}</td>
-                                        <td>{{ if .AllowDM }}<i class="fas fa-check text-success"></i>{{ else }}<i class="fas fa-times text-danger"></i>{{ end }}</td>
+                                        <td>{{ if .AllowDM }}<i class="fas fa-check text-success"></i>{{ end }}</td>
                                     </tr>
                                 {{ end }}
                                 </tbody>
