Fix bootstrap variables

--- a/cmd/frontend/assets/sass/index.scss
+++ b/cmd/frontend/assets/sass/index.scss
@@ -1,3 +1,12 @@
+$link-color: #28a745;
+
+$container-max-widths: (
+        sm: 540px,
+        md: 720px,
+        lg: 960px,
+        xl: 1240px
+);
+
 // Global
 @import "bootstrap/bootstrap";
 @import "helpers";
