--- a/cmd/frontend/assets/sass/bootstrap/_variables.scss
+++ b/cmd/frontend/assets/sass/bootstrap/_variables.scss
@@ -173,7 +173,7 @@ $body-color: $gray-900 !default;
 //
 // Style anchor elements.
 
-$link-color: theme-color("success") !default; // CHANGED
+$link-color: theme-color("primary") !default;
 $link-decoration: none !default;
 $link-hover-color: darken($link-color, 15%) !default;
 $link-hover-decoration: underline !default;
@@ -212,7 +212,7 @@ $container-max-widths: (
         sm: 540px,
         md: 720px,
         lg: 960px,
-        xl: 1240px // CHANGED
+        xl: 1140px
 ) !default;
 
 @include _assert-ascending($container-max-widths, "$container-max-widths");
