Admin field to add new players only

--- a/cmd/frontend/templates/admin/queues.gohtml
+++ b/cmd/frontend/templates/admin/queues.gohtml
@@ -35,6 +35,12 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label class="col-sm-3 col-form-label" for="player-id-new">Player ID (New Only):</label>
+                        <div class="col-sm-3">
+                            <input type="text" name="player-id-new" id="player-id-new" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <label class="col-sm-3 col-form-label" for="player-id-search">Player ID (Search):</label>
                         <div class="col-sm-3">
                             <input type="text" name="player-id-search" id="player-id-search" class="form-control">
