--- a/cmd/frontend/templates/chat_bot.gohtml
+++ b/cmd/frontend/templates/chat_bot.gohtml
@@ -30,12 +30,12 @@
 
                         <div class="row">
                             <div class="col-6 col-md-4 col-lg-3 mb-3">
-                                <div role="button" class="btn btn-success btn-block mb-0">
+                                <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">
                                     <strong>All commands are cached for 10 minutes</strong>
                                 </div>
                             </div>
                             <div class="col-6 col-md-4 col-lg-3 mb-3">
-                                <div role="button" class="btn btn-success btn-block mb-0">
+                                <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">
                                     <strong>All commands are rate limited to every 3 seconds</strong>
                                 </div>
                             </div>
