--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -889,6 +889,14 @@
                     </div>
                     <div class="tab-pane" id="similar" role="tabpanel">
 
+                        <div class="row">
+                            <div class="col-6 col-md-4 col-lg-3 mb-3">
+                                <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">
+                                    <strong>Score is calculating using <code>(Same Owners Count / (Total Owners Count ^ 0.5)</code></strong>
+                                </div>
+                            </div>
+                        </div>
+
                         <h5>Similar by owners</h5>
                         <div class="table-responsive mb-4">
                             <table class="table table-hover table-striped" data-row-type="games" data-order='[[3, "desc"]]' id="similar-owners" data-path="/games/{{ .App.ID }}/same-owners.json">
