--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -723,13 +723,13 @@
 
                         <div class="row">
                             <div class="col-6 col-md-4 col-lg-3 mb-3">
-                                <div role="button" class="btn btn-success btn-block mb-0">
+                                <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">
                                     Achievements<br/><strong>{{ comma .App.AchievementsCount }}</strong>
                                 </div>
                             </div>
 
                             <div class="col-6 col-md-4 col-lg-3 mb-3">
-                                <div role="button" class="btn btn-success btn-block mb-0">
+                                <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">
                                     Average Completion<br/><strong>{{ commaf .App.AchievementsAverageCompletion }}%</strong>
                                 </div>
                             </div>
