--- a/cmd/frontend/templates/includes/footer.gohtml
+++ b/cmd/frontend/templates/includes/footer.gohtml
@@ -42,7 +42,7 @@
     {{ if eq .Env "production" }}
 
         {{/* Arc */}}
-        {{/*<script async src="https://arc.io/widget.min.js#NZRmQpba"></script>*/}}
+        <script async src="https://arc.io/widget.min.js#NZRmQpba"></script>
 
         {{/* Google Analytics */}}
         <script src="https://www.googletagmanager.com/gtag/js?id=UA-125104-31"></script>
