Fix same owners info panel

--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -893,7 +893,8 @@
                         <div class="row">
                             <div class="col-6 col-md-4 col-lg-3 mb-3">
                                 <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">
-                                    <strong>Score is calculating using <code>(Same Owners Count / (Total Owners Count ^ 0.5)</code></strong>
+                                    <strong>Score is calculating using:</strong>
+                                    <br><code>(Same / (Total ^ 0.5)</code>
                                 </div>
                             </div>
                         </div>
