--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -412,7 +412,7 @@
                                                 <td>{{ comma .App.PlayerPeakAllTime }}</td>
                                             </tr>
                                             <tr>
-                                                <td>Peak Last Week</td>
+                                                <td>Peak Last 7 days</td>
                                                 <td>{{ comma .App.PlayerPeakWeek }}</td>
                                             </tr>
                                             <tr>
